fix: scss text-align: left

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -244,7 +244,7 @@ img{
 .about{
     &__container{
         row-gap: 2rem;
-        text-align: center;
+        text-align: left;
     }
     &__subtitle{
         margin-bottom: var(--mb-2);
